tests/core/errors/test_errors_data/quiet/TARGETS.fixture
soft_error("starlark_quiet_soft_error", "Blah", quiet = True)
